// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`applySnapshot(m, { x: "snapshotX", y: "snapshotY", array: [] }) 1`] = `
[
  [
    {
      "args": [
        {
          "$modelId": "id-1",
          "$modelType": "TestModel",
          "array": [],
          "x": "snapshotX",
          "y": "snapshotY",
        },
      ],
      "path": [],
      "type": "[/] $$applySnapshot({"x":"snapshotX","y":"snapshotY","array":[],"$modelId":"id-1","$...) (id 0)",
    },
    {
      "$modelId": "id-1",
      "$modelType": "TestModel",
      "array": [],
      "x": "snapshotX",
      "y": "snapshotY",
    },
  ],
]
`;

exports[`concurrent [m.setYAsync() / m.setXAsync()] 1`] = `
[
  [
    {
      "args": [],
      "path": [],
      "type": "[/] setYAsync() (id 0, async)",
    },
    {
      "$modelId": "id-1",
      "$modelType": "TestModel",
      "array": [],
      "x": "",
      "y": "setYAsync +0",
    },
  ],
  [
    {
      "args": [],
      "path": [],
      "type": "[/] setXAsync() (id 1, async)",
    },
    {
      "$modelId": "id-1",
      "$modelType": "TestModel",
      "array": [],
      "x": "setXAsync +0",
      "y": "setYAsync +0",
    },
  ],
  [
    {
      "args": [],
      "path": [],
      "type": "[/] setXAsync() (id 1, async)",
    },
    {
      "$modelId": "id-1",
      "$modelType": "TestModel",
      "array": [],
      "x": "setXAsync +20",
      "y": "setYAsync +0",
    },
  ],
  [
    {
      "args": [],
      "path": [],
      "type": "[/] setYAsync() (id 0, async)",
    },
    {
      "$modelId": "id-1",
      "$modelType": "TestModel",
      "array": [],
      "x": "setXAsync +20",
      "y": "setYAsync +50",
    },
  ],
]
`;

exports[`m.addtoArray({ a: "otherA" }), m.array[0].setA() 1`] = `
[
  [
    {
      "args": [
        M2 {
          "$": {
            "a": "setA",
          },
          "$modelType": "SubModel",
        },
      ],
      "path": [],
      "type": "[/] addToArray({"$modelType":"SubModel","$":{"a":"otherA"}}) (id 0)",
    },
    {
      "$modelId": "id-1",
      "$modelType": "TestModel",
      "array": [
        {
          "$modelType": "SubModel",
          "a": "otherA",
        },
      ],
      "x": "",
      "y": "",
    },
  ],
  [
    {
      "args": [],
      "path": [
        "array",
        0,
      ],
      "type": "[/array/0] setA() (id 1)",
    },
    {
      "$modelId": "id-1",
      "$modelType": "TestModel",
      "array": [
        {
          "$modelType": "SubModel",
          "a": "setA",
        },
      ],
      "x": "",
      "y": "",
    },
  ],
]
`;

exports[`m.setX() 1`] = `
[
  [
    {
      "args": [],
      "path": [],
      "type": "[/] setX() (id 0)",
    },
    {
      "$modelId": "id-1",
      "$modelType": "TestModel",
      "array": [],
      "x": "setX",
      "y": "",
    },
  ],
]
`;

exports[`m.setXAsync() 1`] = `
[
  [
    {
      "args": [],
      "path": [],
      "type": "[/] setXAsync() (id 0, async)",
    },
    {
      "$modelId": "id-1",
      "$modelType": "TestModel",
      "array": [],
      "x": "setXAsync +0",
      "y": "",
    },
  ],
  [
    {
      "args": [],
      "path": [],
      "type": "[/] setXAsync() (id 0, async)",
    },
    {
      "$modelId": "id-1",
      "$modelType": "TestModel",
      "array": [],
      "x": "setXAsync +20",
      "y": "",
    },
  ],
]
`;

exports[`m.setXAsyncThrowAsync() 1`] = `
[
  [
    {
      "args": [],
      "path": [],
      "type": "[/] setXAsyncThrowAsync() (id 0, async)",
    },
    {
      "$modelId": "id-1",
      "$modelType": "TestModel",
      "array": [],
      "x": "setXAsyncThrowAsync +0",
      "y": "",
    },
  ],
  [
    {
      "args": [],
      "path": [],
      "type": "[/] setXAsyncThrowAsync() (id 0, async) -error thrown-",
    },
    {
      "$modelId": "id-1",
      "$modelType": "TestModel",
      "array": [],
      "x": "setXAsyncThrowAsync +0",
      "y": "",
    },
  ],
]
`;

exports[`m.setXAsyncThrowSync() 1`] = `
[
  [
    {
      "args": [],
      "path": [],
      "type": "[/] setXAsyncThrowSync() (id 0, async)",
    },
    {
      "$modelId": "id-1",
      "$modelType": "TestModel",
      "array": [],
      "x": "setXAsyncThrowSync +0",
      "y": "",
    },
  ],
  [
    {
      "args": [],
      "path": [],
      "type": "[/] setXAsyncThrowSync() (id 0, async) -error thrown-",
    },
    {
      "$modelId": "id-1",
      "$modelType": "TestModel",
      "array": [],
      "x": "setXAsyncThrowSync +0",
      "y": "",
    },
  ],
]
`;

exports[`m.setXAsyncWithEmptyFirstPart() 1`] = `
[
  [
    {
      "args": [],
      "path": [],
      "type": "[/] setXAsyncWithEmptyFirstPart() (id 0, async)",
    },
    {
      "$modelId": "id-1",
      "$modelType": "TestModel",
      "array": [],
      "x": "setXAsyncWithEmptyFirstPart +20",
      "y": "",
    },
  ],
]
`;

exports[`m.setXThrow() 1`] = `
[
  [
    {
      "args": [],
      "path": [],
      "type": "[/] setXThrow() (id 0)",
    },
    {
      "$modelId": "id-1",
      "$modelType": "TestModel",
      "array": [],
      "x": "setXThrow",
      "y": "",
    },
  ],
  [
    {
      "args": [],
      "path": [],
      "type": "[/] setXThrow() (id 0) -error thrown-",
    },
    {
      "$modelId": "id-1",
      "$modelType": "TestModel",
      "array": [],
      "x": "setXThrow",
      "y": "",
    },
  ],
]
`;

exports[`m.setXY() -> m.setX(), m.setY() 1`] = `
[
  [
    {
      "args": [],
      "path": [],
      "type": "[/] setXY() (id 0)",
    },
    {
      "$modelId": "id-1",
      "$modelType": "TestModel",
      "array": [],
      "x": "setXY starts",
      "y": "",
    },
  ],
  [
    {
      "args": [],
      "path": [],
      "type": "[/] setXY() (id 0) >>> [/] setX() (id 1)",
    },
    {
      "$modelId": "id-1",
      "$modelType": "TestModel",
      "array": [],
      "x": "setX",
      "y": "",
    },
  ],
  [
    {
      "args": [],
      "path": [],
      "type": "[/] setXY() (id 0) >>> [/] setY() (id 2)",
    },
    {
      "$modelId": "id-1",
      "$modelType": "TestModel",
      "array": [],
      "x": "setX",
      "y": "setY",
    },
  ],
  [
    {
      "args": [],
      "path": [],
      "type": "[/] setXY() (id 0)",
    },
    {
      "$modelId": "id-1",
      "$modelType": "TestModel",
      "array": [],
      "x": "setXY ends",
      "y": "setY",
    },
  ],
]
`;

exports[`m.setXYAsync() -> m.setXAsync(), m.setYAsync() 1`] = `
[
  [
    {
      "args": [],
      "path": [],
      "type": "[/] setXYAsync() (id 0, async)",
    },
    {
      "$modelId": "id-1",
      "$modelType": "TestModel",
      "array": [],
      "x": "setXYAsync starts",
      "y": "",
    },
  ],
  [
    {
      "args": [],
      "path": [],
      "type": "[/] setXYAsync() (id 0, async) >>> [/] setXAsync() (id 1, async)",
    },
    {
      "$modelId": "id-1",
      "$modelType": "TestModel",
      "array": [],
      "x": "setXAsync +0",
      "y": "",
    },
  ],
  [
    {
      "args": [],
      "path": [],
      "type": "[/] setXYAsync() (id 0, async) >>> [/] setXAsync() (id 1, async)",
    },
    {
      "$modelId": "id-1",
      "$modelType": "TestModel",
      "array": [],
      "x": "setXAsync +20",
      "y": "",
    },
  ],
  [
    {
      "args": [],
      "path": [],
      "type": "[/] setXYAsync() (id 0, async) >>> [/] setYAsync() (id 2, async)",
    },
    {
      "$modelId": "id-1",
      "$modelType": "TestModel",
      "array": [],
      "x": "setXAsync +20",
      "y": "setYAsync +0",
    },
  ],
  [
    {
      "args": [],
      "path": [],
      "type": "[/] setXYAsync() (id 0, async) >>> [/] setYAsync() (id 2, async)",
    },
    {
      "$modelId": "id-1",
      "$modelType": "TestModel",
      "array": [],
      "x": "setXAsync +20",
      "y": "setYAsync +50",
    },
  ],
  [
    {
      "args": [],
      "path": [],
      "type": "[/] setXYAsync() (id 0, async)",
    },
    {
      "$modelId": "id-1",
      "$modelType": "TestModel",
      "array": [],
      "x": "setXYAsync ends",
      "y": "setYAsync +50",
    },
  ],
]
`;

exports[`m.setXYAsyncThrowAsync() -> m.setXYAsyncThrowAsync() 1`] = `
[
  [
    {
      "args": [],
      "path": [],
      "type": "[/] setXYAsyncThrowAsync() (id 0, async) >>> [/] setXAsyncThrowAsync() (id 1, async)",
    },
    {
      "$modelId": "id-1",
      "$modelType": "TestModel",
      "array": [],
      "x": "setXAsyncThrowAsync +0",
      "y": "",
    },
  ],
  [
    {
      "args": [],
      "path": [],
      "type": "[/] setXYAsyncThrowAsync() (id 0, async) >>> [/] setXAsyncThrowAsync() (id 1, async) -error thrown-",
    },
    {
      "$modelId": "id-1",
      "$modelType": "TestModel",
      "array": [],
      "x": "setXAsyncThrowAsync +0",
      "y": "",
    },
  ],
  [
    {
      "args": [],
      "path": [],
      "type": "[/] setXYAsyncThrowAsync() (id 0, async) -error thrown-",
    },
    {
      "$modelId": "id-1",
      "$modelType": "TestModel",
      "array": [],
      "x": "setXAsyncThrowAsync +0",
      "y": "",
    },
  ],
]
`;

exports[`m.setXYAsyncThrowSync() -> m.setXAsyncThrowSync() 1`] = `
[
  [
    {
      "args": [],
      "path": [],
      "type": "[/] setXYAsyncThrowSync() (id 0, async) >>> [/] setXAsyncThrowSync() (id 1, async)",
    },
    {
      "$modelId": "id-1",
      "$modelType": "TestModel",
      "array": [],
      "x": "setXAsyncThrowSync +0",
      "y": "",
    },
  ],
  [
    {
      "args": [],
      "path": [],
      "type": "[/] setXYAsyncThrowSync() (id 0, async) >>> [/] setXAsyncThrowSync() (id 1, async) -error thrown-",
    },
    {
      "$modelId": "id-1",
      "$modelType": "TestModel",
      "array": [],
      "x": "setXAsyncThrowSync +0",
      "y": "",
    },
  ],
  [
    {
      "args": [],
      "path": [],
      "type": "[/] setXYAsyncThrowSync() (id 0, async) -error thrown-",
    },
    {
      "$modelId": "id-1",
      "$modelType": "TestModel",
      "array": [],
      "x": "setXAsyncThrowSync +0",
      "y": "",
    },
  ],
]
`;
